# vor-backend

./: .gitignore  Dockerfile  LICENSE  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: delete-branch.yml
app/: __init_.py  main.py
app/api/: deps.py
app/api/v1/: api.py  auth.py
app/core/: config.py  database.py  security.py
app/models/: candidate.py  job.py  user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: 194b434752f6_tables_explicit_import.py
